--- a/app/hero-detail/hero-detail.component.css
+++ b/app/hero-detail/hero-detail.component.css
@@ -6,7 +6,7 @@ label {
     color: #607D8B;
     font-weight: bold;
   }
-  /* ---tt--tt-*/
+  /* ---tt--*/
   input {
     height: 2em;
     font-size: 1em;
